--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "react-router-dom": "^7.8.1",
     "rehype-raw": "^7.0.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vite-plugin-node-polyfills": "^0.24.0"
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.2.1",
